# analytics-construction-company

./: .gitignore  README.md  construction_company.db  db_creator.py  db_creator_2.py  main.py  my_requests.py  pyproject.toml  utils.py
csv/: customers.csv  flats.csv  material.csv  objects.csv  technic.csv  tmp_material.csv  tmp_technic.csv  tmp_tools.csv  tmp_workers.csv  tools.csv  workers.csv
